# trabajo

./: readme.md
backend/: pyproject.toml
backend/backend/: main.py
frontend/: package-lock.json
