[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Trabajo requisitos"
authors = ["alejandro20019 <aferiag@unal.edu.co>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}


[tool.poetry.scripts]
dev = "main:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
